# biocore-data-model-linkml-template

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
Activity/: index.html
Boolean/: index.html
Class/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Document/: index.html
Donor/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Kind/: index.html
List/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Person/: index.html
PersonStatus/: index.html
Placeholder/: index.html
PlaceholderCollection/: index.html
Resource/: index.html
Sample/: index.html
Service/: index.html
SingleCell/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
VocabularyEncodingScheme/: index.html
about/: index.html
abstract/: index.html
accessRights/: index.html
accrualMethod/: index.html
accrualPeriodicity/: index.html
accrualPolicy/: index.html
affiliation/: index.html
age_in_years/: index.html
audience/: index.html
biocore/: index.html
biocore-data-model-linkml-template/: index.html
birth_date/: index.html
closeMatch/: index.html
confirmsDisease/: index.html
conformsTo/: index.html
contributor/: index.html
coverage/: index.html
creator/: index.html
date/: index.html
definition_prov/: index.html
id/: index.html
(+221 files in other folders)
