[tool.poetry]
name = "biocore_data_model_linkml_template"
version = "0.1.0"
description = "LinkML model for the Data Biosphere project, migrated from https://github.com/DataBiosphere/biocore-data-model/tree/main/content/linkml into a LinkML cookie cutter template"
authors = ["Mark Andrew Miller <MAM@lbl.gov>"]
license = "BSD-3"
readme = "README.md"
include = ["README.md", "src/biocore_data_model_linkml_template/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]